basis-library/primitive/basis-ffi.sml

val EISDIR = _const "Posix_Error_EISDIR" : C.Int.t;
val ELOOP = _const "Posix_Error_ELOOP" : C.Int.t;
val EMFILE = _const "Posix_Error_EMFILE" : C.Int.t;
val EMLINK = _const "Posix_Error_EMLINK" : C.Int.t;
val EMSGSIZE = _const "Posix_Error_EMSGSIZE" : C.Int.t;
val EMULTIHOP = _const "Posix_Error_EMULTIHOP" : C.Int.t;
val ENAMETOOLONG = _const "Posix_Error_ENAMETOOLONG" : C.Int.t;
val ENETDOWN = _const "Posix_Error_ENETDOWN" : C.Int.t;
val ENETRESET = _const "Posix_Error_ENETRESET" : C.Int.t;
val ENETUNREACH = _const "Posix_Error_ENETUNREACH" : C.Int.t;
val ENFILE = _const "Posix_Error_ENFILE" : C.Int.t;
val ENOBUFS = _const "Posix_Error_ENOBUFS" : C.Int.t;
val ENODATA = _const "Posix_Error_ENODATA" : C.Int.t;
val ENODEV = _const "Posix_Error_ENODEV" : C.Int.t;
val ENOENT = _const "Posix_Error_ENOENT" : C.Int.t;
val ENOEXEC = _const "Posix_Error_ENOEXEC" : C.Int.t;
val ENOLCK = _const "Posix_Error_ENOLCK" : C.Int.t;
val ENOLINK = _const "Posix_Error_ENOLINK" : C.Int.t;
val ENOMEM = _const "Posix_Error_ENOMEM" : C.Int.t;
val ENOMSG = _const "Posix_Error_ENOMSG" : C.Int.t;
val ENOPROTOOPT = _const "Posix_Error_ENOPROTOOPT" : C.Int.t;
val ENOSPC = _const "Posix_Error_ENOSPC" : C.Int.t;
val ENOSR = _const "Posix_Error_ENOSR" : C.Int.t;
val ENOSTR = _const "Posix_Error_ENOSTR" : C.Int.t;
val ENOSYS = _const "Posix_Error_ENOSYS" : C.Int.t;
val ENOTCONN = _const "Posix_Error_ENOTCONN" : C.Int.t;
val ENOTDIR = _const "Posix_Error_ENOTDIR" : C.Int.t;
val ENOTEMPTY = _const "Posix_Error_ENOTEMPTY" : C.Int.t;
val ENOTSOCK = _const "Posix_Error_ENOTSOCK" : C.Int.t;
val ENOTSUP = _const "Posix_Error_ENOTSUP" : C.Int.t;
val ENOTTY = _const "Posix_Error_ENOTTY" : C.Int.t;
val ENXIO = _const "Posix_Error_ENXIO" : C.Int.t;
val EOPNOTSUPP = _const "Posix_Error_EOPNOTSUPP" : C.Int.t;
val EOVERFLOW = _const "Posix_Error_EOVERFLOW" : C.Int.t;
val EPERM = _const "Posix_Error_EPERM" : C.Int.t;
val EPIPE = _const "Posix_Error_EPIPE" : C.Int.t;
val EPROTO = _const "Posix_Error_EPROTO" : C.Int.t;
val EPROTONOSUPPORT = _const "Posix_Error_EPROTONOSUPPORT" : C.Int.t;
val EPROTOTYPE = _const "Posix_Error_EPROTOTYPE" : C.Int.t;
val ERANGE = _const "Posix_Error_ERANGE" : C.Int.t;
val EROFS = _const "Posix_Error_EROFS" : C.Int.t;
val ESPIPE = _const "Posix_Error_ESPIPE" : C.Int.t;
val ESRCH = _const "Posix_Error_ESRCH" : C.Int.t;
val ESTALE = _const "Posix_Error_ESTALE" : C.Int.t;
val ETIME = _const "Posix_Error_ETIME" : C.Int.t;
val ETIMEDOUT = _const "Posix_Error_ETIMEDOUT" : C.Int.t;
val ETXTBSY = _const "Posix_Error_ETXTBSY" : C.Int.t;
val EWOULDBLOCK = _const "Posix_Error_EWOULDBLOCK" : C.Int.t;
val EXDEV = _const "Posix_Error_EXDEV" : C.Int.t;
val getErrno = _import "Posix_Error_getErrno" : unit -> C.Int.t;
val strError = _import "Posix_Error_strError" : C.Int.t -> C.String.t;
end
structure FileSys = 
struct
structure A = 
struct
val F_OK = _const "Posix_FileSys_A_F_OK" : C.Int.t;
val R_OK = _const "Posix_FileSys_A_R_OK" : C.Int.t;
val W_OK = _const "Posix_FileSys_A_W_OK" : C.Int.t;
val X_OK = _const "Posix_FileSys_A_X_OK" : C.Int.t;
end
val access = _import "Posix_FileSys_access" : NullString8.t * C.Int.t -> (C.Int.t) C.Errno.t;
val chdir = _import "Posix_FileSys_chdir" : NullString8.t -> (C.Int.t) C.Errno.t;
val chmod = _import "Posix_FileSys_chmod" : NullString8.t * C.Mode.t -> (C.Int.t) C.Errno.t;
val chown = _import "Posix_FileSys_chown" : NullString8.t * C.UId.t * C.GId.t -> (C.Int.t) C.Errno.t;
structure Dirstream = 
struct
val closeDir = _import "Posix_FileSys_Dirstream_closeDir" : C.DirP.t -> (C.Int.t) C.Errno.t;
val openDir = _import "Posix_FileSys_Dirstream_openDir" : NullString8.t -> (C.DirP.t) C.Errno.t;
val readDir = _import "Posix_FileSys_Dirstream_readDir" : C.DirP.t -> (C.String.t) C.Errno.t;
val rewindDir = _import "Posix_FileSys_Dirstream_rewindDir" : C.DirP.t -> unit;
end
val fchdir = _import "Posix_FileSys_fchdir" : C.Fd.t -> (C.Int.t) C.Errno.t;
val fchmod = _import "Posix_FileSys_fchmod" : C.Fd.t * C.Mode.t -> (C.Int.t) C.Errno.t;
val fchown = _import "Posix_FileSys_fchown" : C.Fd.t * C.UId.t * C.GId.t -> (C.Int.t) C.Errno.t;
val fpathconf = _import "Posix_FileSys_fpathconf" : C.Fd.t * C.Int.t -> (C.Long.t) C.Errno.t;
val ftruncate = _import "Posix_FileSys_ftruncate" : C.Fd.t * C.Off.t -> (C.Int.t) C.Errno.t;
val getcwd = _import "Posix_FileSys_getcwd" : (Char8.t) array * C.Size.t -> (C.String.t) C.Errno.t;
val link = _import "Posix_FileSys_link" : NullString8.t * NullString8.t -> (C.Int.t) C.Errno.t;
val mkdir = _import "Posix_FileSys_mkdir" : NullString8.t * C.Mode.t -> (C.Int.t) C.Errno.t;
val mkfifo = _import "Posix_FileSys_mkfifo" : NullString8.t * C.Mode.t -> (C.Int.t) C.Errno.t;
structure O = 
struct
val APPEND = _const "Posix_FileSys_O_APPEND" : C.Int.t;
val BINARY = _const "Posix_FileSys_O_BINARY" : C.Int.t;
val CREAT = _const "Posix_FileSys_O_CREAT" : C.Int.t;
val DSYNC = _const "Posix_FileSys_O_DSYNC" : C.Int.t;
val EXCL = _const "Posix_FileSys_O_EXCL" : C.Int.t;
val NOCTTY = _const "Posix_FileSys_O_NOCTTY" : C.Int.t;
val NONBLOCK = _const "Posix_FileSys_O_NONBLOCK" : C.Int.t;
val RDONLY = _const "Posix_FileSys_O_RDONLY" : C.Int.t;
val RDWR = _const "Posix_FileSys_O_RDWR" : C.Int.t;
val RSYNC = _const "Posix_FileSys_O_RSYNC" : C.Int.t;
val SYNC = _const "Posix_FileSys_O_SYNC" : C.Int.t;
val TEXT = _const "Posix_FileSys_O_TEXT" : C.Int.t;
val TRUNC = _const "Posix_FileSys_O_TRUNC" : C.Int.t;
val WRONLY = _const "Posix_FileSys_O_WRONLY" : C.Int.t;
end
val open2 = _import "Posix_FileSys_open2" : NullString8.t * C.Int.t -> (C.Fd.t) C.Errno.t;
val open3 = _import "Posix_FileSys_open3" : NullString8.t * C.Int.t * C.Mode.t -> (C.Fd.t) C.Errno.t;
val pathconf = _import "Posix_FileSys_pathconf" : NullString8.t * C.Int.t -> (C.Long.t) C.Errno.t;
structure PC = 
struct
val ALLOC_SIZE_MIN = _const "Posix_FileSys_PC_ALLOC_SIZE_MIN" : C.Int.t;
val ASYNC_IO = _const "Posix_FileSys_PC_ASYNC_IO" : C.Int.t;
val CHOWN_RESTRICTED = _const "Posix_FileSys_PC_CHOWN_RESTRICTED" : C.Int.t;
val FILESIZEBITS = _const "Posix_FileSys_PC_FILESIZEBITS" : C.Int.t;
val LINK_MAX = _const "Posix_FileSys_PC_LINK_MAX" : C.Int.t;
val MAX_CANON = _const "Posix_FileSys_PC_MAX_CANON" : C.Int.t;
val MAX_INPUT = _const "Posix_FileSys_PC_MAX_INPUT" : C.Int.t;
val NAME_MAX = _const "Posix_FileSys_PC_NAME_MAX" : C.Int.t;
val NO_TRUNC = _const "Posix_FileSys_PC_NO_TRUNC" : C.Int.t;
val PATH_MAX = _const "Posix_FileSys_PC_PATH_MAX" : C.Int.t;
val PIPE_BUF = _const "Posix_FileSys_PC_PIPE_BUF" : C.Int.t;
val PRIO_IO = _const "Posix_FileSys_PC_PRIO_IO" : C.Int.t;
val REC_INCR_XFER_SIZE = _const "Posix_FileSys_PC_REC_INCR_XFER_SIZE" : C.Int.t;
val REC_MAX_XFER_SIZE = _const "Posix_FileSys_PC_REC_MAX_XFER_SIZE" : C.Int.t;
val REC_MIN_XFER_SIZE = _const "Posix_FileSys_PC_REC_MIN_XFER_SIZE" : C.Int.t;
val REC_XFER_ALIGN = _const "Posix_FileSys_PC_REC_XFER_ALIGN" : C.Int.t;
val SYMLINK_MAX = _const "Posix_FileSys_PC_SYMLINK_MAX" : C.Int.t;
val SYNC_IO = _const "Posix_FileSys_PC_SYNC_IO" : C.Int.t;
val VDISABLE = _const "Posix_FileSys_PC_VDISABLE" : C.Int.t;
end
val readlink = _import "Posix_FileSys_readlink" : NullString8.t * (Char8.t) array * C.Size.t -> (C.SSize.t) C.Errno.t;
val rename = _import "Posix_FileSys_rename" : NullString8.t * NullString8.t -> (C.Int.t) C.Errno.t;
val rmdir = _import "Posix_FileSys_rmdir" : NullString8.t -> (C.Int.t) C.Errno.t;
structure S = 
struct
val IFBLK = _const "Posix_FileSys_S_IFBLK" : C.Mode.t;
val IFCHR = _const "Posix_FileSys_S_IFCHR" : C.Mode.t;
val IFDIR = _const "Posix_FileSys_S_IFDIR" : C.Mode.t;
val IFIFO = _const "Posix_FileSys_S_IFIFO" : C.Mode.t;
val IFLNK = _const "Posix_FileSys_S_IFLNK" : C.Mode.t;
val IFMT = _const "Posix_FileSys_S_IFMT" : C.Mode.t;
val IFREG = _const "Posix_FileSys_S_IFREG" : C.Mode.t;
val IFSOCK = _const "Posix_FileSys_S_IFSOCK" : C.Mode.t;
val IRGRP = _const "Posix_FileSys_S_IRGRP" : C.Mode.t;
val IROTH = _const "Posix_FileSys_S_IROTH" : C.Mode.t;
val IRUSR = _const "Posix_FileSys_S_IRUSR" : C.Mode.t;
val IRWXG = _const "Posix_FileSys_S_IRWXG" : C.Mode.t;
val IRWXO = _const "Posix_FileSys_S_IRWXO" : C.Mode.t;
val IRWXU = _const "Posix_FileSys_S_IRWXU" : C.Mode.t;
val ISGID = _const "Posix_FileSys_S_ISGID" : C.Mode.t;
val ISUID = _const "Posix_FileSys_S_ISUID" : C.Mode.t;
val ISVTX = _const "Posix_FileSys_S_ISVTX" : C.Mode.t;
val IWGRP = _const "Posix_FileSys_S_IWGRP" : C.Mode.t;
val IWOTH = _const "Posix_FileSys_S_IWOTH" : C.Mode.t;
val IWUSR = _const "Posix_FileSys_S_IWUSR" : C.Mode.t;
val IXGRP = _const "Posix_FileSys_S_IXGRP" : C.Mode.t;
val IXOTH = _const "Posix_FileSys_S_IXOTH" : C.Mode.t;
val IXUSR = _const "Posix_FileSys_S_IXUSR" : C.Mode.t;
end
structure ST = 
struct
val isBlk = _import "Posix_FileSys_ST_isBlk" : C.Mode.t -> Bool.t;
val isChr = _import "Posix_FileSys_ST_isChr" : C.Mode.t -> Bool.t;
val isDir = _import "Posix_FileSys_ST_isDir" : C.Mode.t -> Bool.t;
val isFIFO = _import "Posix_FileSys_ST_isFIFO" : C.Mode.t -> Bool.t;
val isLink = _import "Posix_FileSys_ST_isLink" : C.Mode.t -> Bool.t;
val isReg = _import "Posix_FileSys_ST_isReg" : C.Mode.t -> Bool.t;
val isSock = _import "Posix_FileSys_ST_isSock" : C.Mode.t -> Bool.t;
end
structure Stat = 
struct
val fstat = _import "Posix_FileSys_Stat_fstat" : C.Fd.t -> (C.Int.t) C.Errno.t;
val getATime = _import "Posix_FileSys_Stat_getATime" : unit -> C.Time.t;
val getCTime = _import "Posix_FileSys_Stat_getCTime" : unit -> C.Time.t;
val getDev = _import "Posix_FileSys_Stat_getDev" : unit -> C.Dev.t;
val getGId = _import "Posix_FileSys_Stat_getGId" : unit -> C.GId.t;
val getINo = _import "Posix_FileSys_Stat_getINo" : unit -> C.INo.t;
val getMode = _import "Posix_FileSys_Stat_getMode" : unit -> C.Mode.t;
val getMTime = _import "Posix_FileSys_Stat_getMTime" : unit -> C.Time.t;
val getNLink = _import "Posix_FileSys_Stat_getNLink" : unit -> C.NLink.t;
val getRDev = _import "Posix_FileSys_Stat_getRDev" : unit -> C.Dev.t;
val getSize = _import "Posix_FileSys_Stat_getSize" : unit -> C.Off.t;
val getUId = _import "Posix_FileSys_Stat_getUId" : unit -> C.UId.t;
val lstat = _import "Posix_FileSys_Stat_lstat" : NullString8.t -> (C.Int.t) C.Errno.t;
val stat = _import "Posix_FileSys_Stat_stat" : NullString8.t -> (C.Int.t) C.Errno.t;
end
val symlink = _import "Posix_FileSys_symlink" : NullString8.t * NullString8.t -> (C.Int.t) C.Errno.t;
val truncate = _import "Posix_FileSys_truncate" : NullString8.t * C.Off.t -> (C.Int.t) C.Errno.t;
val umask = _import "Posix_FileSys_umask" : C.Mode.t -> C.Mode.t;
val unlink = _import "Posix_FileSys_unlink" : NullString8.t -> (C.Int.t) C.Errno.t;
structure Utimbuf = 
struct
val setAcTime = _import "Posix_FileSys_Utimbuf_setAcTime" : C.Time.t -> unit;
val setModTime = _import "Posix_FileSys_Utimbuf_setModTime" : C.Time.t -> unit;
val utime = _import "Posix_FileSys_Utimbuf_utime" : NullString8.t -> (C.Int.t) C.Errno.t;
end
end
structure IO = 
struct
val close = _import "Posix_IO_close" : C.Fd.t -> (C.Int.t) C.Errno.t;
val dup = _import "Posix_IO_dup" : C.Fd.t -> (C.Fd.t) C.Errno.t;
val dup2 = _import "Posix_IO_dup2" : C.Fd.t * C.Fd.t -> (C.Fd.t) C.Errno.t;
val F_DUPFD = _const "Posix_IO_F_DUPFD" : C.Int.t;
val F_GETFD = _const "Posix_IO_F_GETFD" : C.Int.t;
val F_GETFL = _const "Posix_IO_F_GETFL" : C.Int.t;
val F_GETOWN = _const "Posix_IO_F_GETOWN" : C.Int.t;
val F_SETFD = _const "Posix_IO_F_SETFD" : C.Int.t;
val F_SETFL = _const "Posix_IO_F_SETFL" : C.Int.t;
val F_SETOWN = _const "Posix_IO_F_SETOWN" : C.Int.t;
val fcntl2 = _import "Posix_IO_fcntl2" : C.Fd.t * C.Int.t -> (C.Int.t) C.Errno.t;
val fcntl3 = _import "Posix_IO_fcntl3" : C.Fd.t * C.Int.t * C.Int.t -> (C.Int.t) C.Errno.t;
structure FD = 
struct
val CLOEXEC = _const "Posix_IO_FD_CLOEXEC" : C.Fd.t;
end
structure FLock = 
struct
val F_GETLK = _const "Posix_IO_FLock_F_GETLK" : C.Int.t;
val F_RDLCK = _const "Posix_IO_FLock_F_RDLCK" : C.Short.t;
val F_SETLK = _const "Posix_IO_FLock_F_SETLK" : C.Int.t;
val F_SETLKW = _const "Posix_IO_FLock_F_SETLKW" : C.Int.t;
val F_UNLCK = _const "Posix_IO_FLock_F_UNLCK" : C.Short.t;
